# dingo_manipulation

./: LICENSE  README.md
dingo_gen3_lite_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dingo_gen3_lite_moveit_config/config/: dingo.srdf  dingo_d.srdf  dingo_d_controllers.yaml  dingo_o.srdf  dingo_o_controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
dingo_gen3_lite_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  dingo_gen3_lite_moveit_planning_execution.launch  dingo_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
dingo_gen3_lite_moveit_config/scripts/: customize_moveit.sh
dingo_kinova_bringup/: CMakeLists.txt  package.xml
dingo_kinova_bringup/launch/: dingo_gen3_lite_bringup.launch  ridgeback_gen3_lite_bringup.launch
dingo_kinova_description/: CMakeLists.txt  package.xml
dingo_kinova_description/scripts/: dingo_gen3_lite_envar
dingo_kinova_description/urdf/: dingo_gen3_lite_description.urdf.xacro
dingo_kinova_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dingo_kinova_moveit_config/config/: dingo.srdf  (+1 more)
dingo_manipulation/: CMakeLists.txt  package.xml
docs/: README.md
(+20 files in other folders)
