<?xml version="1.0"?>
<package format="2">
  <name>dingo_kinova_description</name>
  <version>0.0.0</version>
  <description>URDF files and meshes needed for mounting a Gen3 Lite arm to a Dingo</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>dingo_description</exec_depend>
  <exec_depend>kortex_description</exec_depend>
</package>
