<?xml version="1.0"?>
<package format="2">
  <name>dingo_manipulation</name>
  <version>0.0.0</version>
  <description>The dingo_manipulation package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dingo_kinova_description</exec_depend>
  <exec_depend>dingo_kinova_bringup</exec_depend>
  <exec_depend>dingo_kinova_moveit_config</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
